# tubeaiclone

./: .gitignore  COQUI_ALTERNATIVES.md  DOCUMENTATION.md  Dockerfile.api  Dockerfile.api-simple  Dockerfile.worker  Dockerfile.worker-simple  FINAL_ZUSTAND_CLEANUP.md  MIGRATION_GUIDE.md  PLANS.md  QUICK_START.md  README.md  README_PROD.md  README_STREAMLIT.md  README_TTS_SETUP.md  SETUP_COMPLETE.md  SETUP_ENV_VARS.md  SUPABASE_CONNECTION_COMPLETE.md  TEST_CHECKLIST.md  WHY_ZUSTAND_EXISTS.md  XTTS_IMPLEMENTATION_GUIDE.md  XTTS_STREAMLIT_INTEGRATION.md  ZUSTAND_CLEANUP_COMPLETE.md  ZUSTAND_STRIPPED_ERRORS.md  app.py  apply_trigger.py  cloudbuild.tubeaiclone-api.yaml  debug_api.py  delete_all_projects.sql  deploy-api.yaml  deploy-worker.yaml  docker-compose.yml  local_xtts_cli.py  main.py  new_rec.m4a  pyproject.toml  requirements-simple.txt  requirements.txt  show_voices.py  standalone_voiceover_page.py  (+20 more)
api/: main.py
apps/api/: .env  FASTAPI_AUTH_SETUP.md  main.py  requirements.txt
apps/api/auth/: __init__.py  verify.py
apps/streamlit/: app.py  app_legacy.py
apps/web/: SUPABASE_SETUP.md  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts
apps/worker/: tasks.py  worker.py  worker_http.py
pages/: image_generation_test.py  quick_test.py  style_creation.py  title_entry.py  voiceover.py  voiceover_page.py  voiceover_test.py
scripts/: txt2img_sd.py
supabase/: config.toml
supabase/migrations/: 001_initial_schema.sql  002_add_performance_indexes.sql  002_add_profile_trigger.sql  003_add_videos_table.sql  004_change_video_data_to_text.sql
utils/: image_generation.py  sanitization.py  script_generation.py  video_assembly.py  voiceover.py  voiceover_simple.py  xtts_voice_generator.py
worker/: tasks.py
(+105 files in other folders)
