[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 100
combine_as_imports = true
force_sort_within_sections = true
known_first_party = ["apps", "utils"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["apps/web", ".venv", "node_modules", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ISC", "C4"]
ignore = ["E203"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "utils"]
combine-as-imports = true
force-sort-within-sections = true

[tool.poetry]
name = "tubeaiclone"
version = "0.1.0"
description = "TubeAI clone monorepo (apps: api, worker, streamlit; libs: utils)"
authors = ["Ryan Bloch <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.api.dependencies]
fastapi = "*"
uvicorn = "*"
redis = "*"
rq = "*"

[tool.poetry.group.worker.dependencies]
redis = "*"
rq = "*"

[tool.poetry.group.streamlit.dependencies]
streamlit = "*"
streamlit-audiorecorder = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


